contact page changes and blog template final

--- a/blogs/blog-template.html
+++ b/blogs/blog-template.html
@@ -94,122 +94,139 @@
                 </div>
             </div>
         </div>
-        <!-- <div id="hero" class="section hero-section">
-            <div class="w-layout-grid _2-grids _0-gap _100">
-                <div id="w-node-f52a1497-2735-f171-3c8d-6f49dfee458a-dc178eda" class="hero-content-block">
-                    <div class="title-block">
 
-                        <div data-w-id="57969e3e-7732-03f7-71c5-a896fb8c9bed" style="opacity:0"
-                            class="subtitle margin-bottom-40px">
-                            Hair • Nails • Makeup • Beauty
-                        </div>
-                        <div data-w-id="cac36006-9d1e-41cf-bc16-58a5ee13f35c" style="opacity:0"
-                            class="heading h1 text-white margin-bottom-40px">your look <br /><span class="text-span">our
-                                craft</span>
-                        </div><a href="/services" data-w-id="07b5bf2b-c522-8700-8295-6f6d73a4daff" style="opacity:0"
-                            class="button button-pink w-button">View Services</a>
-                    </div>
-                </div>
-        
-        <div id="w-node-_17a3ffb9-d2aa-c6bf-5ad0-e4adb40ce44f-dc178eda" class="hero-video-block">
-            <div data-poster-url="assets/hair_washing_poster.jpg"
-                data-video-urls="assets/hair_washing.mp4,assets/hair_washing.webm" data-autoplay="true" data-loop="true"
-                data-wf-ignore="true" class="video w-background-video w-background-video-atom">
-                <video id="4289ad76-e05e-4382-e9bb-dcde130c8d51-video" autoplay="" loop=""
-                    style="background-image:url(assets/hair_washing_poster.jpg)" muted="" playsinline=""
-                    data-wf-ignore="true" data-object-fit="cover">
-                    <source src="assets/hair_washing.mp4" type="video/mp4" />
-                    <source src="assets/hair_washing.webm" type="video/webm" />
-                </video>
-            </div>
-        </div>
-    </div>
-    </div> -->
         <!-- Blog section starts -->
         <div id="about" class="section">
             <div class="container w-container">
                 <div class="sections-wrapper">
                     <div class="about-section">
 
-                        <h1 data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a7a" style="opacity:0"
-                            class="heading h3 margin-bottom-40px">Keratin vs Hair Botox: Which Treatment Is Right for
+                        <h1 class="heading h3 margin-bottom-40px">Keratin vs Hair Botox: Which Treatment Is Right for
                             Your Hair Type?</h1>
-                        <div data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a77" style="opacity:0"
-                            class="subtitle dark-title margin-bottom-40px">Written by</div>
+                        <div class="paragraph small-paragraph subtitle dark-title margin-top-20px">Written by</div>
+                        <p class="dark-title paragraph margin-bottom-40px">
+                            Mahina Sehrish <br> <span class="paragraph small-paragraph">Sugarcoat Salon,
+                                Bangalore</span>
+                        </p>
                         <div class="w-layout-grid _2-grids center-grid">
-                            <div id="w-node-_953fa10b-5bac-8865-4e96-81ee900b4b3e-dc178eda" class="grid-images-div">
-                                <div class="image-container"><img class="image" src="/assets/hero.webp"
-                                        alt="Premium hair, beauty and nail services at Sugarcoat Salon"
-                                        style="opacity:0"
+                            <div class="grid-images-div">
+                                <div class="image-container"><img class="image"
+                                        src="/assets/blog/keratin-treatment-sugarcoat-salon.webp"
+                                        alt="Keratin Treatment at Sugarcoat Salon" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
-                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy"
-                                        srcset="/assets/hero-p-500.webp 500w, /assets/hero-p-800.webp 800w, /assets/hero-p-1080.webp 1080w, /assets/hero.webp 1188w" />
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-
-                                <div data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a7a" style="opacity:0"
-                                    class="heading h4 margin-bottom-40px">Keratin and Hair Botox: What You Should Know
-                                    Before Choosing</div>
-                                <p data-w-id="18294f07-da53-8414-af7d-d5e0d019489c" style="opacity:0"
-                                    class="paragraph small-paragraph margin-bottom-40px">
+                                <h2 class="heading h4 margin-bottom-20px">Keratin and Hair Botox: What You Should Know
+                                    Before Choosing</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
                                     If you are dealing with frizz, dryness, or unmanageable hair, you have probably
                                     heard about Keratin and Hair Botox treatments. While both aim to improve hair
                                     quality, they serve very different purposes. Choosing the right one depends on your
                                     hair condition, not trends.
                                 </p>
-                                <div data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a7a" style="opacity:0"
-                                    class="heading h4 margin-bottom-40px">What Is a Keratin Treatment?</div>
-                                <p data-w-id="18294f07-da53-8414-af7d-d5e0d019489c" style="opacity:0"
-                                    class="paragraph small-paragraph margin-bottom-20px">
+                                <h2 class="heading h4 margin-bottom-20px">What Is a Keratin Treatment?</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
                                     Keratin treatment is primarily a smoothing and straightening service. It works by
                                     infusing keratin protein into the hair cuticle and sealing it with heat.
                                 </p>
-                                <p class="heading h5">Best for:</p>
+                                <h3 class="heading h5">Best for:</h3>
                                 <ul class="paragraph small-paragraph">
                                     <li>Extremely frizzy or curly hair</li>
                                     <li>Unmanageable, coarse textures</li>
                                     <li>Hair that needs long-lasting smoothness</li>
+                                </ul>
+                                <h3 class="heading h5">Results you can expect:</h3>
+                                <ul class="paragraph small-paragraph">
+                                    <li>Reduced frizz and volume</li>
+                                    <li>Sleeker, straighter appearance</li>
+                                    <li>Easier daily styling</li>
+                                </ul>
+                                <h3 class="heading h5">Things to know:</h3>
+                                <ul class="paragraph small-paragraph">
+                                    <li>Results last around 5-6 months</li>
+                                    <li>Not ideal for very thin or heavily damaged hair</li>
+                                    <li>Requires proper sulfate-free aftercare</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
-
                             <div class="title-block padding-left-right-60">
-
-                                <div data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a7a" style="opacity:0"
+                                <!-- <div 
                                     class="heading h4 margin-bottom-40px">Keratin and Hair Botox: What You Should Know
                                     Before Choosing</div>
-                                <p data-w-id="18294f07-da53-8414-af7d-d5e0d019489c" style="opacity:0"
+                                <p 
                                     class="paragraph small-paragraph margin-bottom-40px">
                                     If you are dealing with frizz, dryness, or unmanageable hair, you have probably
                                     heard about Keratin and Hair Botox treatments. While both aim to improve hair
                                     quality, they serve very different purposes. Choosing the right one depends on your
                                     hair condition, not trends.
+                                </p> -->
+                                <h2 class="heading h4 margin-bottom-20px">What Is Hair Botox?</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Despite the name, Hair Botox contains no injections or chemicals. It is a deep
+                                    conditioning and repair treatment designed to restore hair health.
                                 </p>
-                                <div data-w-id="88662d6e-bca9-c8e5-6f3f-071804367a7a" style="opacity:0"
-                                    class="heading h4 margin-bottom-40px">What Is a Keratin Treatment?</div>
-                                <p data-w-id="18294f07-da53-8414-af7d-d5e0d019489c" style="opacity:0"
-                                    class="paragraph small-paragraph margin-bottom-20px">
-                                    Keratin treatment is primarily a smoothing and straightening service. It works by
-                                    infusing keratin protein into the hair cuticle and sealing it with heat.
-                                </p>
-                                <p class="heading h5">Best for:</p>
+                                <h3 class="heading h5">Best for:</h3>
                                 <ul class="paragraph small-paragraph">
-                                    <li>Extremely frizzy or curly hair</li>
-                                    <li>Unmanageable, coarse textures</li>
-                                    <li>Hair that needs long-lasting smoothness</li>
+                                    <li>Dry, damaged, or chemically treated hair</li>
+                                    <li>Dull, lifeless strands</li>
+                                    <li>Hair breakage and split ends</li>
+                                </ul>
+                                <h3 class="heading h5">Results you can expect:</h3>
+                                <ul class="paragraph small-paragraph">
+                                    <li>Improved softness and shine</li>
+                                    <li>Healthier-looking hair texture</li>
+                                    <li>Better moisture retention</li>
+                                </ul>
+                                <h3 class="heading h5">Things to know:</h3>
+                                <ul class="paragraph small-paragraph">
+                                    <li>Does not straighten hair</li>
+                                    <li>Results usually last 5-6 months</li>
+                                    <li>Requires proper sulfate-free aftercare</li>
+                                    <li>Can be repeated safely</li>
                                 </ul>
                             </div>
-                            <div id="w-node-_953fa10b-5bac-8865-4e96-81ee900b4b3e-dc178eda" class="grid-images-div">
-                                <div class="image-container"><img class="image" src="/assets/hero.webp"
-                                        alt="Premium hair, beauty and nail services at Sugarcoat Salon"
-                                        style="opacity:0"
+                            <div class="grid-images-div">
+                                <div class="image-container"><img class="image"
+                                        src="/assets/blog/botox-treatment-sugarcoat-salon.webp"
+                                        alt="Botox Treatment at Sugarcoat Salon" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
-                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy"
-                                        srcset="/assets/hero-p-500.webp 500w, /assets/hero-p-800.webp 800w, /assets/hero-p-1080.webp 1080w, /assets/hero.webp 1188w" />
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-layout-grid _2-grids center-grid">
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h4 margin-bottom-20px">Keratin vs Hair Botox: Quick Comparison</h2>
+                                <ul class="paragraph small-paragraph">
+                                    <li>Straightening: Keratin ✔ | Botox ✖</li>
+                                    <li>Repair & hydration: Botox ✔ | Keratin moderate</li>
+                                    <li>Frizz control: Keratin strong | Botox mild</li>
+                                    <li>Chemical strength: Keratin higher | Botox gentle</li>
+                                </ul>
+                                <h2 class="heading h4 margin-bottom-20px">Which One Should You Choose?</h2>
+                                <ul class="paragraph small-paragraph">
+                                    <li>Choose Keratin if your main goal is smooth, frizz-free, manageable hair.</li>
+                                    <li>Choose Hair Botox if your hair feels damaged, dry, or weak and needs recovery.
+                                    </li>
+                                    <li>In some cases, stylists recommend Botox first to repair hair, followed by
+                                        Keratin later.</li>
+                                </ul>
+                                <h2 class="heading h4 margin-bottom-20px">Final Advice</h2>
+                                <p class="paragraph small-paragraph margin-bottom-40px">
+                                    There is no one-size-fits-all solution. A professional hair analysis is essential
+                                    before choosing any treatment. At Sugarcoat, we assess your hair texture, damage
+                                    level, and lifestyle before recommending what truly works for you.
+                                </p>
+                                <div class="align-button-center">
+                                    <div class="heading h4 margin-bottom-20px">Looking for
+                                        keratin or botox treatments?
+                                    </div><a href="/contact" class="button text-black w-button">Book
+                                        Appointment</a>
                                 </div>
                             </div>
                         </div>
@@ -259,8 +276,8 @@
         </section> -->
         <section class="section footer">
             <div class="container w-container">
-                <div data-w-id="db756e8f-ca9f-dc37-7206-20b69c7cc025" style="opacity:0" class="footer-wrapper-two"><a
-                        href="#" class="footer-brand w-inline-block">
+                <div data-w-id="db756e8f-ca9f-dc37-7206-20b69c7cc025" style="opacity:0" class="footer-wrapper-two">
+                    <a href="#" class="footer-brand w-inline-block">
                         <div class="footer-brand-block">
                             <a href="/" class="footer-brand w-inline-block">
                                 <img src="/assets/sc-logo-03.svg" loading="lazy" width="186"
