canonical, thumbnail and htaccess for blog pages

--- a/blog.html
+++ b/blog.html
@@ -184,23 +184,24 @@
                                     <p class="paragraph small-paragraph">12 jun 2020</p>
                                 </div>
                             </div>
-                            <div id="w-node-c40cec85-71e9-afd0-c87b-6c9ee65807fe-dc178eda" class="card">
+                            <a href="/blogs/keratin-vs-hair-botox"
+                                id="w-node-c40cec85-71e9-afd0-c87b-6c9ee65807fe-dc178eda" class="card card-link">
                                 <div class="card-image-block margin-bottom-30px">
-                                    <div class="image-container"><img src="/assets/placeholder-02.webp" loading="lazy"
-                                            alt="" class="image" /></div>
+                                    <div class="image-container"><img src="/assets/blog/keartin-vs-botox-hair.webp"
+                                            loading="lazy" alt="" class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
                                     <div class="tags margin-bottom-30px">Haircare</div>
                                     <div class="card-title margin-bottom-30px">Keratin vs Botox Hair Treatment – What’s
                                         Right for You?
                                     </div>
-                                    <p class="paragraph small-paragraph">30 may 2020</p>
+                                    <p class="paragraph small-paragraph">10 Jan 2026</p>
+                                    <div>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
-                </div>
-            </div>
         </section>
         <!-- Blog section ends -->
 
