--- a/blogs/keratin-vs-hair-botox.html
+++ b/blogs/keratin-vs-hair-botox.html
@@ -3,18 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Hair & Beauty Blog | Tips, Trends & Care Guides – Sugarcoat Salon
+    <title>Keratin vs Hair Botox: Which Treatment Is Right? | Sugarcoat Salon
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/blog">
-    <meta content="Explore expert hair care tips, beauty trends, salon guides, and styling advice from Sugarcoat Salon professionals in Bangalore.
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/blogs/keratin-vs-hair-botox">
+    <meta content="Confused between keratin and hair botox? Learn the key differences, benefits, and which hair treatment suits your hair type best at Sugarcoat Salon.
 " name="description" />
-    <meta content="Hair & Beauty Blog | Tips, Trends & Care Guides – Sugarcoat Salon
+    <meta content="Keratin vs Hair Botox: Which Treatment Is Right? | Sugarcoat Salon
 " property="og:title" />
-    <meta content="Explore expert hair care tips, beauty trends, salon guides, and styling advice from Sugarcoat Salon professionals in Bangalore.
+    <meta content="Confused between keratin and hair botox? Learn the key differences, benefits, and which hair treatment suits your hair type best at Sugarcoat Salon.
+" name="description
 " property="og:description" />
-    <meta content="Hair & Beauty Blog | Tips, Trends & Care Guides – Sugarcoat Salon
+    <meta content="Keratin vs Hair Botox: Which Treatment Is Right? | Sugarcoat Salon
 " property="twitter:title" />
-    <meta content="Explore expert hair care tips, beauty trends, salon guides, and styling advice from Sugarcoat Salon professionals in Bangalore.
+    <meta content="Confused between keratin and hair botox? Learn the key differences, benefits, and which hair treatment suits your hair type best at Sugarcoat Salon.
+" name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
