privacy and terms heading animation remove

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -79,7 +79,7 @@
                 <div class="section-wrapper">
                     <div class="title-block margin-bottom-60px">
 
-                        <h1 data-w-id="2438fe07-9125-ad85-55e4-cd5409cfcb90" style="opacity:0" class="heading h3">
+                        <h1 class="heading h3">
                             Privacy Policy</h2></br>
                             <p class="paragraph small-paragraph">At Sugarcoat Salon, Bangalore, India, we value your
                                 privacy
