--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -77,7 +77,7 @@
             <div class="container w-container">
                 <div class="section-wrapper">
                     <div class="title-block margin-bottom-60px">
-                        <h1 data-w-id="2438fe07-9125-ad85-55e4-cd5409cfcb90" style="opacity:0" class="heading h3">
+                        <h1 class="heading h3">
                             Terms and Conditions</h1></br>
                         <p class="paragraph small-paragraph">By accessing or using this website, booking appointments,
                             or
